feat(projects): added projects stub
